--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
@@ -1,2 +1,3 @@
 # 가상 면접 사례로 배우는 대규모 시스템 설계 기초 1권
 * [사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성](사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성)
+* [개략적인_규모_추정/개략적인_규모_추정](개략적인_규모_추정/개략적인_규모_추정)
