--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
@@ -3,3 +3,4 @@
 * [개략적인_규모_추정/개략적인_규모_추정](개략적인_규모_추정/개략적인_규모_추정)
 * [처리율_제한_장치의_설계/처리율_제한_장치의_설계](처리율_제한_장치의_설계/처리율_제한_장치의_설계)
 * [안정_해시_설계/안정_해시_설계](안정_해시_설계/안정_해시_설계)
+* [키-값_저장소_설계/키-값_저장소_설계](키-값_저장소_설계/키-값_저장소_설계)
