--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
@@ -7,3 +7,4 @@
 * [분산_시스템을_위한_유일_ID_생성기_설계/분산_시스템을_위한_유일_ID_생성기_설계](분산_시스템을_위한_유일_ID_생성기_설계/분산_시스템을_위한_유일_ID_생성기_설계)
 * [URL_단축기_설계/URL_단축기_설계](URL_단축기_설계/URL_단축기_설계)
 * [웹_크롤러_설계/웹_크롤러_설계](웹_크롤러_설계/웹_크롤러_설계)
+* [알림_시스템_설계/알림_시스템_설계](알림_시스템_설계/알림_시스템_설계)
