--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
@@ -8,3 +8,4 @@
 * [URL_단축기_설계/URL_단축기_설계](URL_단축기_설계/URL_단축기_설계)
 * [웹_크롤러_설계/웹_크롤러_설계](웹_크롤러_설계/웹_크롤러_설계)
 * [알림_시스템_설계/알림_시스템_설계](알림_시스템_설계/알림_시스템_설계)
+* [뉴스_피드_시스템_설계/뉴스_피드_시스템_설계](뉴스_피드_시스템_설계/뉴스_피드_시스템_설계)
