--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
@@ -10,3 +10,4 @@
 * [알림_시스템_설계/알림_시스템_설계](알림_시스템_설계/알림_시스템_설계)
 * [뉴스_피드_시스템_설계/뉴스_피드_시스템_설계](뉴스_피드_시스템_설계/뉴스_피드_시스템_설계)
 * [채팅_시스템_설계/채팅_시스템_설계](채팅_시스템_설계/채팅_시스템_설계)
+* [검색어_자동완성_시스템/검색어_자동완성_시스템](검색어_자동완성_시스템/검색어_자동완성_시스템)
