--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/구글_드라이브_설계/구글_드라이브_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/구글_드라이브_설계/구글_드라이브_설계.md
@@ -65,7 +65,7 @@ use_math: true
     * 파일 저장소
         * S3를 파일 저장소로 사용하고 가용성과 데이터 무손실 보장하기 위해 두 개 이상의 지역에 데이터 다중화
 
-![overview](./img/1.png){: w="300" h = "340"}
+![overview](./img/1.png){: w="25%"}
 
 ### 동기화 충돌
 * 두 명 이상의 사용자가 같은 파일이나 폴더를 동시에 업데이트하려고 할 때
@@ -75,7 +75,7 @@ use_math: true
 
 ### 개략적인 설계안
 
-![overview](./img/2.png){: w="380" h = "340"}
+![overview](./img/2.png){: w="31.67%"}
 
 * 사용자 단말: 클라이언트
 * 블록 저장소 서버(block server): 파일 블록을 클라우드 저장소에 업로드하는 서버
@@ -221,3 +221,4 @@ use_math: true
         * 분할, 압축, 암호화 로직을 클라이언트에 둬야 하므로 플랫폼별로 따로 구현해야 함
         * 클라이언트가 해킹 당할 가능성이 있으므로 암호화 로직을 클라이언트에 두는 것은 위험
 * 접속상태 관리 로직을 별도의 서비스로 분리
+
