--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/뉴스_피드_시스템_설계/뉴스_피드_시스템_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/뉴스_피드_시스템_설계/뉴스_피드_시스템_설계.md
@@ -79,7 +79,7 @@ use_math: true
 
 ### 피드 읽기 흐름 상세 설계
 
-![overview](./img/1.png){: w="340" h = "380"}
+![overview](./img/1.png){: w="28.33%"}
 
 * 사용자가 뉴스 피드를 읽으려는 요청을 보냄
 * 로드밸런서가 요청을 WS 중 하나로 전달
@@ -111,3 +111,4 @@ use_math: true
     * 여러 데이터 센터 지원
     * 메시지 큐 활용
     * 핵심 메트릭에 대한 모니터링 등
+
