--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성.md
@@ -43,7 +43,7 @@ tags: [system architecture, system design]
 * 이런 문제를 해결하기 위해 **로드밸런서**(load balancer)를 도입
     * 부하 분산 집합(load balancing set)에 속한 웹 서버들에 트래픽 부하를 고르게 분산
 
-![loadbanlancer](./img/1.png){: w="320" h = "360"}
+![loadbanlancer](./img/1.png){: w="26.67%"}
 *load balancing example*
 
 * 사용자는 로드밸런서의 public IP로 접속하므로 웹 서버가 클라이언트의 접속을 직접 처리하지 않음
@@ -62,7 +62,7 @@ tags: [system architecture, system design]
     * insert, delete, update 등은 master로만
 * 애플리케이션은 일반적으로 read가 write 보다 많으므로, 보통 slave의 수가 master보다 많이 구성됨
 
-![dbclustering](./img/2.png){: w="320" h = "300"}
+![dbclustering](./img/2.png){: w="26.67%"}
 
 * 얻을 수 있는 이점
     * 성능: 변경 연산은 master로만 전달되고, 읽기 연산은 여러 DB로 분산되므로 병렬로 처리될 수 있는 query의 수가 늘어나 성능이 좋아짐
@@ -80,7 +80,7 @@ tags: [system architecture, system design]
 
 ## System Overview
 
-![overview](./img/3.png){: w="320" h = "400"}
+![overview](./img/3.png){: w="26.67%"}
 
 * 사용자는 DNS로부터 로드밸런서의 IP를 받음
 * 사용자는 IP를 통해 로드밸런서에 접속
@@ -150,7 +150,7 @@ tags: [system architecture, system design]
         * 컨텐츠의 다른 버전을 서비스하도록 오브젝트 버저닝(object versioning) 이용
             * URL 마지막에 버전 번호를 인자로 주는 방식
 
-![overview](./img/4.png){: w="320" h = "400"}
+![overview](./img/4.png){: w="26.67%"}
 *CDN & Cache*
 
 ## 무상태(Stateless) 웹 계층
@@ -175,7 +175,7 @@ tags: [system architecture, system design]
     * 상태 정보의 경우, 공유 저장소(shared storage)로부터 가져옴
     * 웹 서버와 물리적으로 분리돼 단순하고, 안정적이며, 확장이 쉬운 구조
 
-![overview](./img/5.png){: w="380" h = "400"}
+![overview](./img/5.png){: w="31.67%"}
 *Staless Architecture*
 
 * 자동 규모 확장(autoscaling)은 트래픽 양에 따라 웹 서버를 자동으로 추가하거나 삭제하는 기능
@@ -183,7 +183,7 @@ tags: [system architecture, system design]
 ## 데이터센터
 * 서비스의 가용성을 높이고, 전 세계 어디서도 쾌적하게 사용할 수 있도록 하기 위해서 여러 데이터센터(data center)를 지원하는 것이 필수
 
-![overview](./img/6.png){: w="420" h = "380"}
+![overview](./img/6.png){: w="35%"}
 *Multi Datacenters*
 
 * 장애가 없는 상황에서 사용자는 가장 가까운 데이터센터로 안내되는데, 이를 지리적 라우팅(geoDNS routing or geo routing)이라 함
@@ -276,3 +276,4 @@ tags: [system architecture, system design]
 * 데이터 계층은 샤딩으로 규모 확장
 * 각 계층은 독립적 서비스로 분할
 * 시스템을 지속적으로 모니터링하고, 자동화 도구 활용
+
