--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/알림_시스템_설계/알림_시스템_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/알림_시스템_설계/알림_시스템_설계.md
@@ -46,7 +46,7 @@ use_math: true
     * 어떤 서비스들은 특정 시장에서 사용할 수 있음
 * 사용자 단말
 
-![overview](./img/1.png){: w="340" h = "300"}
+![overview](./img/1.png){: w="28.33%"}
 
 * 문제점
     * SPOF
@@ -61,7 +61,7 @@ use_math: true
 * 알림 서버를 증설하고 자동으로 수평적 규모 확장이 이뤄질 수 있도록 설정
 * 메시지 큐로 컴포넌트 사이의 강한 결합을 끊음
 
-![overview](./img/2.png){: w="400" h = "350"}
+![overview](./img/2.png){: w="33.33%"}
 
 * 1~N까지의 서비스
     * 알림 시스템 서버의 API를 통해 알림을 보낼 서비스들
@@ -126,3 +126,4 @@ use_math: true
 * 이벤트 추적
     * 알림 확인율, 클릭율, 실제 앱 사용으로 이어지는 비율 등은 중요한 메트릭
     * 데이터 분석 서비스와 통합해 이런 정보를 파악해야 함
+
