--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/유튜브_설계/유튜브_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/유튜브_설계/유튜브_설계.md
@@ -52,7 +52,7 @@ use_math: true
     * 트랜스코딩 큐: 비디오 트랜스코딩 완료 이벤트들을 보관할 메시지 큐
     * 트랜스코딩 완료 핸들러: 트랜스코딩 완료 큐에서 이벤트 데이터를 꺼내 메타데이터 캐시와 DB를 갱신할 작업 서버
 
-![overview](./img/1.png){: w="380" h = "380"}
+![overview](./img/1.png){: w="31.67%"}
 
 * 비디오 업로드
     * 비디오를 원본 저장소에 업로드
@@ -109,7 +109,7 @@ use_math: true
 * 여러 유형의 비디오 프로세싱 파이프라인을 지원하면서 처리 과정의 병렬성을 높이기 위해 적절한 수준의 추상화를 통해 클라이언트 프로그래머로 하여금 실행할 작업(task)를 손수 정의할 수 있도록 해야 함
     * 페이스북의 스트리밍 비디오 엔진은 DAG 프로그래밍 모델을 통해 작업을 단계별로 배열할 수 있도록 해 작업들이 순차적으로 또는 병렬적으로 실행될 수 있게 함
 
-![overview](./img/2.png){: w="380" h = "340"}
+![overview](./img/2.png){: w="31.67%"}
 
 * 비디오 부분에 적용되는 작업
     * 검사(inspection): 좋은 품질의 비디오인지, 손상은 없는지 확인
@@ -119,7 +119,7 @@ use_math: true
 
 ### 비디오 트랜스코딩 아키텍처
 
-![overview](./img/3.png){: w="380" h = "300"}
+![overview](./img/3.png){: w="31.67%"}
 
 * 전처리기
     * 비디오 분할
@@ -238,3 +238,4 @@ use_math: true
 * 비디오 삭제
     * 저작권 위반 등 부적절한 비디오는 삭제해야 함
     * 업로드 과정에서 식별하 수도 있고, 신고 절차로 판단할 수도 있음
+
