--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/채팅_시스템_설계/채팅_시스템_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/채팅_시스템_설계/채팅_시스템_설계.md
@@ -67,7 +67,7 @@ use_math: true
     * 동시 접속자가 1M이고, 접속당 10K의 서버 메모리가 필요하다면 10GB 메모리면 처리 가능
     * 그러나 SPOF 등의 관점에서 하나의 서버로 모든 것을 처리하는 설계는 비권장
 
-![overview](./img/1.png){: w="340" h = "380"}
+![overview](./img/1.png){: w="28.33%"}
 
 * 특징
     * 실시간으로 메시지를 주고 받기 위해 웹소켓 연결은 유지해야 함
@@ -178,3 +178,4 @@ use_math: true
         * 채팅 서버 하나가 죽었을 때, 서비스 탐색 기능이 클라이언트들에게 새로운 서버를 배정
     * 메시지 재전송
         * 메시지의 안정적 전송을 보장하기 위해 재시도나 큐 활용
+
