--- a/_wiki/Programming_Language/Java/스트림_소개와_파이프라인/스트림_소개와_파이프라인.md
+++ b/_wiki/Programming_Language/Java/스트림_소개와_파이프라인/스트림_소개와_파이프라인.md
@@ -60,7 +60,7 @@ public class Example {
 
 ### 내부 반복자를 사용해 병렬 처리가 쉬움
 
-![iterators](./img/1.png){: w="330" h = "300"}
+![iterators](./img/1.png){: w="27.5%"}
 *External & Internal Iterator*
 
 - 외부 반복자(External Iterator): 개발자가 코드로 직접 컬렉션의 요소를 반복해서 가져오는 코드 패턴
@@ -69,7 +69,7 @@ public class Example {
   - 개발자는 요소 처리 코드에만 집중하고, 컬렉션 내부 요소를 어떻게 반복시킬지는 컬렉션에게 맡김
   - 내부 반복자는 요소들의 반복 순서를 변경하거나, 멀티 코어 CPU 활용을 위해 요소를 분배, 병렬 작업을 수행하게 도와주기에 순차적 외부 반복자보다 효율적
 
-![parallel](./img/2.png){: w="300" h = "300"}
+![parallel](./img/2.png){: w="25%"}
 *Parallel in Internal Iterator*
 
 - 병렬 처리 스트림을 사용하면 main 스레드를 포함해 ForkJoinPool(스레드풀)의 작업 스레드들이 병렬적으로 요소를 처리
@@ -100,7 +100,7 @@ public class Example {
   - 중간 처리는 매핑, 필터링, 정렬을 수행
   - 최종 처리는 반복, 카운팅, 평균, 총합 등을 수행
 
-![execute](./img/3.png){: w="360" h = "300"}
+![execute](./img/3.png){: w="30%"}
 *중간 처리와 최종 처리*
 
 ```java
@@ -176,3 +176,4 @@ double ageAvg = list.stream() // 오리지널 스트림
   - 중간 처리 역할은 리턴 타입이 스트림
   - 최종 처리 역할은 리턴 타입이 기본 타입이거나, Optional
   - 자세한 내용은 Stream 자바 문서를 볼 것
+
