--- a/_wiki/Programming_Language/Java/스트림과_여러_메소드/스트림과_여러_메소드.md
+++ b/_wiki/Programming_Language/Java/스트림과_여러_메소드/스트림과_여러_메소드.md
@@ -34,7 +34,7 @@ public class Example {
 ### flatMapXXX()
 * **요소를 대체하는 복수 개의 요소들**로 구성된 새로운 스트림을 반환
 
-![flatmap](./img/1.png){: w="360" h = "280"}
+![flatmap](./img/1.png){: w="30%"}
 *flatmap*
 
 ```java
@@ -65,7 +65,7 @@ public class Example {
 ### mapXXX()
 * **요소를 대체하는 요소**로 구성된 새로운 스트림 반환
 
-![map](./img/2.png){: w="320" h = "280"}
+![map](./img/2.png){: w="26.67%"}
 *map*
 
 ```java
@@ -494,3 +494,4 @@ Map<Member.Sex, String> mapByName = totalList.stream()
     )
   );
 ```
+
