--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/웹_크롤러_설계/웹_크롤러_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/웹_크롤러_설계/웹_크롤러_설계.md
@@ -25,7 +25,7 @@ use_math: true
 * 저장 용량 요구량은 500TB/월, 총 30PB
 
 ## 개략적인 설계
-![overview](./img/1.png){: w="400" h = "350"}
+![overview](./img/1.png){: w="33.33%"}
 
 ### 시작 URL 집합
 * 웹 크롤러가 크롤링을 시작하는 출발점
@@ -176,3 +176,4 @@ use_math: true
     * 서버가 상태정보를 유지하지 않도록 무상태 서버로 설계
 * 가용성, 일관성, 안정성
 * 데이터 분석 솔루션
+
