--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/처리율_제한_장치의_설계/처리율_제한_장치의_설계.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/처리율_제한_장치의_설계/처리율_제한_장치의_설계.md
@@ -175,7 +175,7 @@ tags: [system architecture, system design]
             * INCR: 메모리에 저장된 카운터의 값 1 증가
             * EXPIRE: 타임아웃을 설정해, 설정된 시간이 지나면 자동 삭제
 
-![overview](./img/1.png){: w="380" h = "320"}
+![overview](./img/1.png){: w="31.67%"}
 *개략적인 구조*
 
 * 동작원리
@@ -197,7 +197,7 @@ tags: [system architecture, system design]
         * X-Ratelimit-Retry-After: 한도 제한에 걸리지 않으려면 몇 초 뒤에 요청을 다시 보내야 하는지
 
 ### 상세 설계
-![overview](./img/2.png){: w="400" h = "350"}
+![overview](./img/2.png){: w="33.33%"}
 *전체 구조*
 
 * 처리 제한 규칙은 디스크에 보관
@@ -244,3 +244,4 @@ tags: [system architecture, system design]
 * 임계치를 고려해 짧은 시간 많은 요청을 보내지 않기
 * 예외나 에러 처리 코드 도입
 * retry 로직을 구현할 때는 백오프(back-off) 시간 두기
+
