--- a/_wiki/Programming_Language/Java/스트림과_병렬_처리/스트림과_병렬_처리.md
+++ b/_wiki/Programming_Language/Java/스트림과_병렬_처리/스트림과_병렬_처리.md
@@ -22,7 +22,7 @@ tags: [programming language, java]
   * 서브 데이터를 멀티 코어에서 병렬로 처리
   * **Join**: 서브 데이터 처리 결과를 결합해 최종 결과 반환
 
-![forkjoin](./img/1.png){: w="360" h = "320"}
+![forkjoin](./img/1.png){: w="30%"}
 *ForkJoin*
 
 * 실제 Fork 단계에서는 위 예시처럼 단순하게 데이터를 분할하지 않음
@@ -137,3 +137,4 @@ public class Example {
   }
 }
 ```
+
