--- a/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
+++ b/_wiki/Book/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권/가상_면접_사례로_배우는_대규모_시스템_설계_기초_1권.md
@@ -1,15 +1,15 @@
 # 가상 면접 사례로 배우는 대규모 시스템 설계 기초 1권
-* [사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성](사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성)
-* [개략적인_규모_추정/개략적인_규모_추정](개략적인_규모_추정/개략적인_규모_추정)
-* [처리율_제한_장치의_설계/처리율_제한_장치의_설계](처리율_제한_장치의_설계/처리율_제한_장치의_설계)
-* [안정_해시_설계/안정_해시_설계](안정_해시_설계/안정_해시_설계)
-* [키-값_저장소_설계/키-값_저장소_설계](키-값_저장소_설계/키-값_저장소_설계)
-* [분산_시스템을_위한_유일_ID_생성기_설계/분산_시스템을_위한_유일_ID_생성기_설계](분산_시스템을_위한_유일_ID_생성기_설계/분산_시스템을_위한_유일_ID_생성기_설계)
-* [URL_단축기_설계/URL_단축기_설계](URL_단축기_설계/URL_단축기_설계)
-* [웹_크롤러_설계/웹_크롤러_설계](웹_크롤러_설계/웹_크롤러_설계)
-* [알림_시스템_설계/알림_시스템_설계](알림_시스템_설계/알림_시스템_설계)
-* [뉴스_피드_시스템_설계/뉴스_피드_시스템_설계](뉴스_피드_시스템_설계/뉴스_피드_시스템_설계)
-* [채팅_시스템_설계/채팅_시스템_설계](채팅_시스템_설계/채팅_시스템_설계)
-* [검색어_자동완성_시스템/검색어_자동완성_시스템](검색어_자동완성_시스템/검색어_자동완성_시스템)
-* [유튜브_설계/유튜브_설계](유튜브_설계/유튜브_설계)
-* [구글_드라이브_설계/구글_드라이브_설계](구글_드라이브_설계/구글_드라이브_설계)
+* [[사용자_수에_따른_규모_확장성/사용자_수에_따른_규모_확장성]]
+* [[개략적인_규모_추정/개략적인_규모_추정]]
+* [[처리율_제한_장치의_설계/처리율_제한_장치의_설계]]
+* [[안정_해시_설계/안정_해시_설계]]
+* [[키-값_저장소_설계/키-값_저장소_설계]]
+* [[분산_시스템을_위한_유일_ID_생성기_설계/분산_시스템을_위한_유일_ID_생성기_설계]]
+* [[URL_단축기_설계/URL_단축기_설계]]
+* [[웹_크롤러_설계/웹_크롤러_설계]]
+* [[알림_시스템_설계/알림_시스템_설계]]
+* [[뉴스_피드_시스템_설계/뉴스_피드_시스템_설계]]
+* [[채팅_시스템_설계/채팅_시스템_설계]]
+* [[검색어_자동완성_시스템/검색어_자동완성_시스템]]
+* [[유튜브_설계/유튜브_설계]]
+* [[구글_드라이브_설계/구글_드라이브_설계]]
